{
    "name": "MainInputActions",
    "maps": [
        {
            "name": "Generic",
            "id": "43fa14f6-467f-4407-aab5-4ee79e31c65f",
            "actions": [
                {
                    "name": "GenericA",
                    "type": "Button",
                    "id": "e916b0ea-2867-4249-b158-65a92cfd3d76",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GenericB",
                    "type": "Button",
                    "id": "f2beeaa9-9b38-476c-b304-ac927e3782d1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GenericY",
                    "type": "Button",
                    "id": "2ef2cb20-9d89-445e-b262-d3b0fa2f862b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GenericX",
                    "type": "Button",
                    "id": "9a88825b-560e-4c06-869b-a4c4baac432c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GenericLB",
                    "type": "Button",
                    "id": "706c0dea-e7cf-4862-bc72-0d84fa69e982",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GenericLT",
                    "type": "Button",
                    "id": "ea7baad3-ad33-4d44-b486-69e0aabec8e9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GenericRB",
                    "type": "Button",
                    "id": "a216e9c3-0edd-4715-83d6-5aa4bbb1b3f3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GenericRT",
                    "type": "Button",
                    "id": "b084d63d-8510-4b88-9d99-0b0e15099c9d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GenericL3",
                    "type": "Button",
                    "id": "a5419da6-157c-4b21-bc75-e0df9259fc1c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GenericR3",
                    "type": "Button",
                    "id": "b1dc6dad-00d4-42d4-8ffe-19ff640de721",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GenericSelect",
                    "type": "Button",
                    "id": "662eb34d-cfb2-4fbd-8842-b0f4a435ff1c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GenericStart",
                    "type": "Button",
                    "id": "65192994-a2d9-4b08-886e-e2fac31e9be0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GenericDPadUp",
                    "type": "Button",
                    "id": "f236ed2f-6ecb-4197-98a3-1a30dd9487c4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GenericDPadLeft",
                    "type": "Button",
                    "id": "a2519091-49da-4264-87f8-5c3aa21d0f8a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GenericDPadRight",
                    "type": "Button",
                    "id": "f225dac5-988f-4d3b-a459-151dee21cc79",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GenericDPadDown",
                    "type": "Button",
                    "id": "50a99789-577f-4fdc-93d1-e8415e48a1f0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "35cc5cee-232d-48f3-8d91-0df1e373c1da",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GenericA",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8916791a-c1fe-4156-905f-023f6b6420d6",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GenericB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd65ff12-8e6b-4a88-b8b2-a6a2b7236993",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GenericY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f35df039-4b88-4ef1-a7ba-339732ede61b",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GenericX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25344e41-45c4-4ffd-b239-864af61e9d45",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GenericLB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55148822-01c4-4b29-9783-b419bc6a5ad0",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GenericLT",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "176111ba-5c77-488e-8286-9aabb4af4376",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GenericRB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a2a52d9-b73e-4902-b238-258608d2e8b9",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GenericRT",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "26e81174-ae10-4337-aba4-db01a56fd1fc",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GenericL3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "535d313a-4dee-4f0e-a6ca-57a38e53ad3d",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GenericR3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "12c480d7-fa47-40f8-a628-d9b5821e6bef",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GenericSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f584e47-b45f-4f36-9851-527f233c5c53",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GenericStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "209742b7-2754-45aa-900a-602c26f1a08b",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GenericDPadUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7ad1120a-a11d-49d5-b288-ba60914981d8",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GenericDPadLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f2c8a5b5-81d4-4494-9477-41f7389c8f5c",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GenericDPadRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bf8c981d-5836-45b8-bd41-530314fc7ea1",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GenericDPadDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Playstation",
            "id": "58ce8707-b0d1-4fb2-934b-eff464157b4f",
            "actions": [
                {
                    "name": "PlaystationCross",
                    "type": "Button",
                    "id": "5b8c9ddb-4bbc-47d5-a937-c09408f0daba",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlaystationSquare",
                    "type": "Button",
                    "id": "b4c80732-96e4-4be8-ae2d-b160a0e4c4de",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlaystationTriangle",
                    "type": "Button",
                    "id": "e1f8fdc4-c65c-41aa-9739-73e911153da2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlaystationCircle",
                    "type": "Button",
                    "id": "0f926cc0-ff65-48e1-84c0-426bf70bef0f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlaystationL1",
                    "type": "Button",
                    "id": "f37d83bc-de90-4ed4-becc-66bd61f7c137",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlaystationL2",
                    "type": "Button",
                    "id": "3c4bc38d-e3b6-425e-8323-14aa781a05b0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlaystationR1",
                    "type": "Button",
                    "id": "342b6109-5741-4e4a-b9be-c3d70e367e63",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlaystationR2",
                    "type": "Button",
                    "id": "55bb26b2-f77a-4710-9178-c3d961e33e73",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlaystationSelect",
                    "type": "Button",
                    "id": "90bc0a9e-f768-43a0-908c-6249fd547d72",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlaystationStart",
                    "type": "Button",
                    "id": "c54d11b8-c760-4cb4-ad76-dfee3903ab70",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlaystationDPadUp",
                    "type": "Button",
                    "id": "dba685ad-c058-4977-a5fd-b24c9338c78c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlaystationDPadLeft",
                    "type": "Button",
                    "id": "c4a35d2a-7ab4-4ad8-a82d-82896ab6ef3a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlaystationDPadRight",
                    "type": "Button",
                    "id": "e7f91a6d-a9ec-42c8-975b-2ffc9f302aa5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlaystationDPadDown",
                    "type": "Button",
                    "id": "1e5bafc7-0bfa-427f-a0ab-7882cfe4d6b1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlaystationL3",
                    "type": "Button",
                    "id": "603d910b-0fcd-402c-8913-1a98d68da0d7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlaystationR3",
                    "type": "Button",
                    "id": "e77c834b-87b2-40c6-b57d-d8a1d7660a85",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c8650c62-2121-4bb6-bf0c-1965def4829c",
                    "path": "<DualShockGamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaystationCross",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f4ef1c6-255c-46f5-a8fb-e475449e2153",
                    "path": "<DualShockGamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaystationSquare",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8bf3626d-fa68-4fb5-8944-82de6447ec43",
                    "path": "<DualShockGamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaystationTriangle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "57918a6e-d49d-45e6-94de-17f2c76af84b",
                    "path": "<DualShockGamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaystationCircle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4766ab67-cd1c-4f10-aa7e-8614ca878924",
                    "path": "<DualShockGamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaystationL1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f3735d0-0118-493a-b34f-8270a9c8d44f",
                    "path": "<DualShockGamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaystationL2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "232066f1-f354-4c2a-842b-eadb75609ff4",
                    "path": "<DualShockGamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaystationR1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c3637924-f71c-4a65-9769-892476119faa",
                    "path": "<DualShockGamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaystationR2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c67b0d9-4b08-4812-9913-718abc3de76a",
                    "path": "<DualShockGamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaystationSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38b80dfc-712a-402a-a78d-7b385acccd34",
                    "path": "<DualShockGamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaystationStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6b48a242-282a-4aa1-bbbf-06cebd4890a1",
                    "path": "<DualShockGamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaystationDPadUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d76fddfa-3668-4861-8119-5d77a3301c06",
                    "path": "<DualShockGamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaystationDPadLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1417fc72-509a-45e0-a7b1-d72db5be4d2c",
                    "path": "<DualShockGamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaystationDPadRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c26b74be-b5db-4d87-94ce-e2af3e001287",
                    "path": "<DualShockGamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaystationDPadDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bf6c17b6-2a28-40b9-900f-608cfe54a525",
                    "path": "<DualShockGamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaystationL3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6613d9cd-4215-4ddf-94ef-854669196e09",
                    "path": "<DualShockGamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaystationR3",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "KBM",
            "id": "27dd13f4-5bad-442f-bc6b-ae6c3400ab14",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "3003ed75-f083-42e8-a1ad-9881c59c5640",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f0b5dcef-1740-4f65-b912-28cc2dd14ef8",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}